<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#92bcee"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#9DC2E0"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image1"
                            android:layout_width="0dp"
                            android:layout_height="500px"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:layout_margin="4dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/namsai1"/>

                        <ImageView
                            android:id="@+id/image2"
                            android:layout_width="0dp"
                            android:layout_height="500px"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:layout_margin="4dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/namsai2"/>

                        <ImageView
                            android:id="@+id/image3"
                            android:layout_width="0dp"
                            android:layout_height="500px"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:layout_margin="4dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/namsai3"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/textnamsai5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" About Namsai"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textBelowImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namsai1"
                android:textSize="16sp"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/textnamsai6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Things To Do"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:id="@+id/textyaganti3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/namsai2"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textnamsai7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="How To Reach"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textnamsai8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/namsai4"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="Back"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
